--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -53,7 +53,7 @@
     left: 50%;
     transform: translate(-50%);
     height: 100%;
-    color: #F1F1F1;
+    color: #610c74;
     font: normal normal bold 19px/29px Poppins;
     text-align: center;
 }
@@ -64,11 +64,11 @@
     height: 37px;
     border-radius: 20px;
     border: none;
-    background: #00bd7a;
+    color: #610c74;
     font: normal normal bold 20px/25px Poppins;
     color: #121212;
     margin: 15px 0;
-    box-shadow: 0 0 5px #00bd7a;
+    box-shadow: 0 0 5px #610c74;
 }
 
 .download-content {
@@ -226,7 +226,7 @@
     position: relative;
     width: 100%;
     height: 75px;
-    background-color: #292929;
+    background-color: #610c74;
     border-radius: 10px;
     transition: opacity 1s;
     opacity: .4;
