--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -15,30 +15,30 @@
     width: 160px;
     height: 37px;
     margin: auto 30px;
-    background: #00bd7a;
-    border: 4px solid #00bd7a;
+    background: #610c74;
+    border: 4px solid #610c74;
     font: normal normal bold 20px/25px Poppins;
     cursor: pointer;
-    box-shadow: 0 0 5px #00bd7a;
+    box-shadow: 0 0 5px #610c74;
     outline: none;
 }
 
 .tab-btn-css:hover {
-    background: #006e47;
-    box-shadow: 0 0 5px #006e47;
-    border: 4px solid #006e47;
+    background: #610c74;
+    box-shadow: 0 0 5px #610c74;
+    border: 4px solid #610c74;
 }
 
 .active-tab-btn {
-    background: #006e47;
-    border: 4px solid #bd5d26;
-    box-shadow: 0 0 5px #bd5d26;
+    background: #610c74;
+    border: 4px solid #610c74;
+    box-shadow: 0 0 5px #610c74;
 }
 
 .active-tab-btn:hover {
-    background: #006e47;
-    border: 4px solid #bd5d26;
-    box-shadow: 0 0 5px #bd5d26;
+    background: #610c74;
+    border: 4px solid #610c74;
+    box-shadow: 0 0 5px #610c74;
 }
 
 .tabs-settings-content {
@@ -122,9 +122,9 @@
 
 .account {
     display: inline-block;
-    background: #00bd7a;
-    box-shadow: 0 0 5px #006e47;
-    border: 4px solid #00bd7a;
+    background: #610c74;
+    box-shadow: 0 0 5px #610c74;
+    border: 4px solid #610c74;
     font: normal normal bold 30px/40px Poppins;
     width: 500px;
     height: 100px;
@@ -134,9 +134,9 @@
 }
 
 .account:hover {
-    background: #006e47;
-    box-shadow: 0 0 5px #006e47;
-    border: 4px solid #006e47;
+    background: #610c74;
+    box-shadow: 0 0 5px #610c74;
+    border: 4px solid #610c74;
 }
 
 .account-image {
@@ -188,15 +188,15 @@
 }
 
 .active-account {
-    background: #006e47;
-    border: 4px solid #bd5d26;
-    box-shadow: 0 0 5px #bd5d26;
+    background: #610c74;
+    border: 4px solid #610c74;
+    box-shadow: 0 0 5px #610c74;
 }
 
 .active-account:hover {
-    background: #006e47;
-    border: 4px solid #bd5d26;
-    box-shadow: 0 0 5px #bd5d26;
+    background: #610c74;
+    border: 4px solid #610c74;
+    box-shadow: 0 0 5px #610c74;
 }
 
 
