--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -191,12 +191,17 @@
     background: #610c74;
     border: 4px solid #610c74;
     box-shadow: 0 0 5px #610c74;
+    margin-bottom: 1rem;
+    transition: opacity 1s;
+    opacity: .4;
 }
 
 .active-account:hover {
     background: #610c74;
     border: 4px solid #610c74;
     box-shadow: 0 0 5px #610c74;
+    transition: opacity 1s;
+    opacity: 1;
 }
 
 
