--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -9,25 +9,6 @@
     display: flex;
 }
 
-.player-head {
-    margin: auto 30px;
-    background-image: url("../../images/default/setve.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    width: 50px;
-    height: 50px;
-    border: none;
-    border-radius: 30px;
-    transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
-}
-
-.player-head:hover {
-    border-radius: 10px;
-    transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
-}
-
 .settings-btn {
     position: absolute;
     top: 10px;
@@ -59,19 +40,21 @@
 }
 
 .play-btn {
-    top: 10px;
+    position: center;
+    top: 3px;
+    left: 180px;
     width: 160px;
     height: 37px;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
-    color: #610c74;
+    color: #4123b8;
     font: normal normal bold 20px/25px Poppins;
-    color: #121212;
+    color: #4123b8;
     margin: 15px 0;
     box-shadow: 0 0 5px #610c74;
 }
 
-.download-content {
+download-content {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -106,16 +89,6 @@
     display: flex;
     height: 78vh;
     margin: 3rem 2rem;
-}
-
-.news-list {
-    position: relative;
-    overflow: auto;
-    width: 100%;
-}
-
-.news-list::-webkit-scrollbar {
-    width: 0;
 }
 
 .news-block {
@@ -225,11 +198,11 @@
 .server {
     position: relative;
     width: 100%;
+    top: 25px;
+    left: 357px;
     height: 75px;
     background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
     border-radius: 30px;
-    transition: opacity 1s;
-    opacity: .4;
 }
 
 .server:hover {
@@ -280,7 +253,7 @@
     width: 49px;
     height: 33px;
     background-color: #262626;
-    border-radius: 4px;
+    border-radius: 30px;
     transition: background-color .2s;
 }
 
@@ -295,18 +268,155 @@
     transition: color .2s;
 }
 
-.online {
-    position: absolute;
-    top: -6px;
-    left: 41px;
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
-    border: 2px solid #1A1A1A;
-    transition: all .2s;
-    background-color: #1AC707;
+.navigation-item {
+    position: relative;
+    height: 69px;
+    width: 69px;
+    background-color: #181818;
+    border: 1px solid #212121;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: #828282
 }
 
-.online.off {
-    background-color: #FF0409;
+#avatarContainer {
+    border-radius: 50%;
+    border: 2px solid #cad7e1;
+    box-sizing: border-box;
+    background: rgba(1, 2, 1, 0.5);
+    height: 110px;
+    width: 110px;
+    box-shadow: 0px 0px 10px 0px rgb(0 0 0);
+    overflow: hidden;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    top: -100px;
+    left: 10px;
+}
+
+#avatarOverlay {
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.25s ease;
+    font-weight: bold;
+    letter-spacing: 2px;
+    background-color: rgba(104, 36, 36, 0.35);
+    -webkit-user-select: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.newsButtonText {
+    position: relative;
+    top: 0px;
+    left: 308px;
+    position: relative;
+    top: 0px;
+    left: 308px;
+    width: 160px;
+    height: 37px;
+    border-radius: 10px;
+    border: none;
+    color: #4123b8;
+    font: normal normal bold 20px/25px Poppins;
+    color: #4123b8;
+    margin: 15px 0;
+    box-shadow: 0 0 5px #610c74;
+}
+
+.BV {
+    position: relative;
+    font: normal normal bold 51px/25px Poppins;
+    color: #E1E1E1;
+    top: 104px;
+    left: 82px;
+    transition: color .2s;
+}
+#landingContainer {
+    height: 100%;
+    position: relative;
+    transition: background 2s ease;
+    overflow-y: hidden;
+}
+
+/* Upper content container. */
+#landingContainer > #upper {
+    position: relative;
+    transition: top 2s ease;
+    top: 0px;
+    height: 77%;
+    display: flex;
+}
+#landingContainer > #upper > #left {
+    display: inline-flex;
+    width: 15%;
+    height: 100%;
+    justify-content: flex-end;
+}
+#landingContainer > #upper > #content {
+    display: inline-flex;
+    width: 70%;
+    height: 100%;
+}
+#landingContainer > #upper > #right {
+    display: inline-flex;
+    width: 15%;
+    height: 100%;
+}
+
+/* Lower content container. */
+#landingContainer > #lower {
+    height: 23%;
+    display: flex;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+#landingContainer > #lower > #left {
+    position: relative;
+    transition: top 2s ease;
+    top: 0px;
+    height: 100%;
+    width: 33%;
+    display: inline-flex;
+    justify-content: center;
+}
+#landingContainer > #lower > #left #content {
+    position: relative;
+    top: 25px;
+    display: inline-flex;
+    line-height: 24px;
+    left: 50px;
+}
+#landingContainer > #lower > #center {
+    position: relative;
+    transition: top 2s ease;
+    top: 0px;
+    height: 100%;
+    width: 34%;
+    display: inline-flex;
+    justify-content: center;
+}
+#landingContainer > #lower > #center #content {
+    position: relative;
+    z-index: 500;
+    transition: top 2s ease;
+    top: 10px;
+}
+#landingContainer > #lower > #right {
+    position: relative;
+    transition: top 2s ease;
+    top: 0px;
+    height: 100%;
+    width: 33%;
+    display: inline-flex;
 }
