--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -1,43 +1,43 @@
 .tabs-settings-btn {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    background: #00000080;
+    width: 130px;
+    background-color: #0000001a;
+    border-right: 3px solid rgba(255, 255, 255, .1);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 10;
 }
 
 .tab-btn-css {
-    border-radius: 23px;
-    width: 160px;
-    height: 37px;
-    margin: auto 30px;
-    background: #610c74;
-    border: 4px solid #610c74;
-    font: normal normal bold 20px/25px Poppins;
+    border-radius: 11px;
+    width: 116px;
+    height: 39px;
+    margin: auto 12px;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
+    font: normal normal bold 15px/20px Poppins;
     cursor: pointer;
-    box-shadow: 0 0 5px #610c74;
     outline: none;
+    position: relative;
+    top: 10px;
+    left: -3px;
 }
 
 .tab-btn-css:hover {
-    background: #610c74;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
     box-shadow: 0 0 5px #610c74;
-    border: 4px solid #610c74;
 }
 
 .active-tab-btn {
-    background: #610c74;
-    border: 4px solid #610c74;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
     box-shadow: 0 0 5px #610c74;
 }
 
 .active-tab-btn:hover {
-    background: #610c74;
-    border: 4px solid #610c74;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
     box-shadow: 0 0 5px #610c74;
 }
 
@@ -53,6 +53,8 @@
     background: transparent;
     opacity: 0;
     pointer-events: none;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .active-tab-content {
@@ -103,40 +105,35 @@
  ******************************************************************************/
 
 .add-account {
-    width: 80%;
+    position: relative;
     height: 10%;
     border: none;
     border-radius: 15px;
-    font: normal normal bold 30px/40px Poppins;
+    font: normal normal bold 30px/40px Tahoma;
     color: #D1D1D1;
     background-color: #303030;
-    box-shadow: 1px 2px 5px #585858;
     margin: 20px 0;
     margin-bottom: 10px;
+    top: -19px;
+    left: 298px;
 }
 
 .accounts {
     display: contents;
     justify-content: center;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
 }
 
 .account {
     display: inline-block;
-    background: #610c74;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
     box-shadow: 0 0 5px #610c74;
-    border: 4px solid #610c74;
     font: normal normal bold 30px/40px Poppins;
     width: 500px;
     height: 100px;
     margin: 1% 2%;
     border-radius: 100px;
     text-align: start;
-}
-
-.account:hover {
-    background: #610c74;
-    box-shadow: 0 0 5px #610c74;
-    border: 4px solid #610c74;
 }
 
 .account-image {
@@ -188,18 +185,18 @@
 }
 
 .active-account {
-    background: #610c74;
-    border: 4px solid #610c74;
-    box-shadow: 0 0 5px #610c74;
+    position: relative;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
+    box-shadow: 0 0 5px rgb(255 150 167);
     margin-bottom: 1rem;
     transition: opacity 1s;
     opacity: .4;
+    top: 111px;
+    left: -127px;
 }
 
 .active-account:hover {
-    background: #610c74;
-    border: 4px solid #610c74;
-    box-shadow: 0 0 5px #610c74;
+    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
     transition: opacity 1s;
     opacity: 1;
 }
