--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -48,9 +48,7 @@
     transform: translate(-50%, -50%);
     width: 95%;
     height: 80%;
-    padding-bottom: 1.5rem;
     border-radius: 20px;
-    background: transparent;
     opacity: 0;
     pointer-events: none;
     max-width: 90%;
@@ -80,9 +78,12 @@
 }
 
 .settings-content-scroll {
+    position: relative;
     overflow: auto;
     width: 100%;
     height: 100%;
+    top: -26px;
+    left: 56px;
 }
 
 .settings-content-scroll::-webkit-scrollbar {
