--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -9,6 +9,25 @@
     display: flex;
 }
 
+.player-head {
+    margin: auto 30px;
+    background-image: url("../../images/default/setve.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 15px;
+    transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
+}
+
+.player-head:hover {
+    border-radius: 5px;
+    transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
+}
+
 .settings-btn {
     position: absolute;
     top: 10px;
@@ -16,12 +35,12 @@
     text-align: center;
     height: 50px;
     border: none;
-    border-radius: 30px;
+    border-radius: 15px;
     transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
 }
 
 .settings-btn:hover {
-    border-radius: 10px;
+    border-radius: 5px;
     transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
 }
 
@@ -34,34 +53,25 @@
     left: 50%;
     transform: translate(-50%);
     height: 100%;
-    color: #610c74;
+    color: #F1F1F1;
     font: normal normal bold 19px/29px Poppins;
     text-align: center;
 }
 
 .play-btn {
-    position: center;
-    top: 3px;
-    left: 180px;
+    top: 10px;
     width: 160px;
     height: 37px;
-    border-radius: 10px;
+    border-radius: 20px;
     border: none;
-    color: #4123b8;
+    background: #00bd7a;
     font: normal normal bold 20px/25px Poppins;
-    color: #4123b8;
+    color: #121212;
     margin: 15px 0;
-    box-shadow: 0 0 5px #610c74;
-    background: linear-gradient(to right, rgb(39 126 159), rgb(81 61 136));
-    transition: 0.25s ease;
+    box-shadow: 0 0 5px #00bd7a;
 }
 
-.play-btn:hover {
-    width: 170px;
-    height: 40px;
-}
-
-download-content {
+.download-content {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -98,6 +108,16 @@ download-content {
     margin: 3rem 2rem;
 }
 
+.news-list {
+    position: relative;
+    overflow: auto;
+    width: 100%;
+}
+
+.news-list::-webkit-scrollbar {
+    width: 0;
+}
+
 .news-block {
     margin-bottom: 1rem;
     transition: opacity 1s;
@@ -119,7 +139,7 @@ download-content {
     left: 0px;
     width: 100%;
     height: 87px;
-    background: linear-gradient(to right, rgb(39 126 159), rgb(81 61 136));
+    background-color: #292929;
     border-radius: 10px 10px 0px 0px;
     transition: color .2s, filter .2s;
 }
@@ -176,7 +196,7 @@ download-content {
 .bbWrapper {
     position: relative;
     padding: 20px;
-    background: linear-gradient(to right, rgb(39 126 159), rgb(81 61 136));
+    background-color: #1f1f1f;
     font-family: Poppins;
     font-size: 13px !important;
     color: #E1E1E1;
@@ -205,11 +225,11 @@ download-content {
 .server {
     position: relative;
     width: 100%;
-    top: 25px;
-    left: 357px;
     height: 75px;
-    background: linear-gradient(to right, rgb(39 126 159), rgb(81 61 136));
-    border-radius: 30px;
+    background-color: #292929;
+    border-radius: 10px;
+    transition: opacity 1s;
+    opacity: .4;
 }
 
 .server:hover {
@@ -223,7 +243,6 @@ download-content {
     height: 45px;
     top: 15px;
     left: 15px;
-    border-radius: 30px;
 }
 
 .name {
@@ -260,7 +279,7 @@ download-content {
     width: 49px;
     height: 33px;
     background-color: #262626;
-    border-radius: 30px;
+    border-radius: 4px;
     transition: background-color .2s;
 }
 
@@ -275,152 +294,18 @@ download-content {
     transition: color .2s;
 }
 
-.navigation-item {
-    position: relative;
-    height: 69px;
-    width: 69px;
-    background-color: #181818;
-    border: 1px solid #212121;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    fill: #828282
-}
-
-#avatarContainer {
-    border-radius: 50%;
-    border: 2px solid #cad7e1;
-    box-sizing: border-box;
-    background: rgba(1, 2, 1, 0.5);
-    height: 110px;
-    width: 110px;
-    box-shadow: 0px 0px 10px 0px rgb(0 0 0);
-    overflow: hidden;
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    top: -100px;
-    left: 10px;
-}
-
-#avatarOverlay {
-    opacity: 0;
+.online {
     position: absolute;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.25s ease;
-    font-weight: bold;
-    letter-spacing: 2px;
-    background-color: rgba(104, 36, 36, 0.35);
-    -webkit-user-select: none;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-
-.newsButtonText {
-    position: relative;
-    top: 0px;
-    left: 308px;
-    position: relative;
-    top: 0px;
-    left: 308px;
-    width: 160px;
-    height: 37px;
+    top: -6px;
+    left: 41px;
+    width: 10px;
+    height: 10px;
     border-radius: 10px;
-    border: none;
-    color: #4123b8;
-    font: normal normal bold 20px/25px Poppins;
-    color: #4123b8;
-    margin: 15px 0;
-    box-shadow: 0 0 5px #610c74;
-    background: linear-gradient(to right, rgb(39 126 159), rgb(81 61 136));
-    transition: 0.25s ease;
+    border: 2px solid #1A1A1A;
+    transition: all .2s;
+    background-color: #1AC707;
 }
 
-.newsButtonText:hover {
-    width: 170px;
-    height: 40px;
-}
-
-.BV {
-    position: relative;
-    font: normal normal bold 52px/52px Poppins;
-    color: #E1E1E1;
-    top: 104px;
-    left: -82;
-    transition: color .2s;
-    border: 1px solid #ffffff;
-    border-radius: 6px;
-    margin-left: 181px;
-    height: 48px;
-}
-
-.mediaContainer {
-    position: relative;
-    height: -485px;
-    top: 650px;
-    left: 787px;
-    width: 160px;
-    height: 37px;
-    border-radius: 10px;
-    border: none;
-    color: #4123b8;
-    font: normal normal bold 20px/25px Poppins;
-    color: #4123b8;
-    margin: 15px 0;
-    box-shadow: 0 0 5px #610c74;
-    background: linear-gradient(to right, rgb(39 126 159), rgb(81 61 136));
-    transition: 0.25s ease;
-}
-
-/* Divider bar between the external and internal icons. */
-.mediaDivider {
-    height: 1px;
-    width: 14px;
-    background: rgb(255, 255, 255);
-    margin: 10px 0px;
-}
-
-.mediaSVG {
-    position: relative;
-    fill: #ffffff;
-    height: 12px;
-    transition: 0.25s ease;
-    cursor: pointer;
-    height: 35px;
-    width: 39px;
-    top: 0px;
-    left: 67px;
-}
-.mediaSVG:hover,
-.mediaURL:focus .mediaSVG,
-.mediaSVG:active {
-    height: 35px;
-    width: 39px;
-    top: 0px;
-    left: 13px;
-}
-
-/* Social media URL shared styles. */
-.mediaURL {
-    outline: none;
-}
-
-.info {
-    position: relative;
-    height: -485px;
-    top: 113px;
-    left: 101px;
-    width: 569px;
-    height: 37px;
-    border: none;
-    font: normal normal bold 20px/25px Poppins;
-    color: #e1e1e1;
+.online.off {
+    background-color: #FF0409;
 }
