--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -1,46 +1,44 @@
 .tabs-settings-btn {
-    width: 127;
-    display: flex;
-    justify-content: space-between;
     position: fixed;
-    left: 0;
-    top: 255px;
-    height: 243px;
     bottom: 0;
-    z-index: 10;
-    flex-direction: column;
+    width: 100%;
+    height: 70px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    background: #00000080;
+    display: flex;
+    justify-content: center;
 }
 
 .tab-btn-css {
-    border-radius: 75px;
-    width: 116px;
-    height: 39px;
-    margin: auto 12px;
-    background: linear-gradient(to right, rgb(210 204 23), rgb(255 153 0));
-    font: normal normal bold 15px/20px Poppins;
+    border-radius: 23px;
+    width: 160px;
+    height: 37px;
+    margin: auto 30px;
+    background: #00bd7a;
+    border: 4px solid #00bd7a;
+    font: normal normal bold 20px/25px Poppins;
     cursor: pointer;
+    box-shadow: 0 0 5px #00bd7a;
     outline: none;
-    position: relative;
-    top: 10px;
-    left: -8px;
-    transition: 0.25s ease;
 }
 
 .tab-btn-css:hover {
-    background: linear-gradient(to right, rgb(210 204 23), rgb(255 153 0));
-    width: 120px;
-    height: 43px;
+    background: #006e47;
+    box-shadow: 0 0 5px #006e47;
+    border: 4px solid #006e47;
 }
 
 .active-tab-btn {
-    background: linear-gradient(to right, rgb(210 204 23), rgb(255 153 0));
-    transition: 0.25s ease;
+    background: #006e47;
+    border: 4px solid #bd5d26;
+    box-shadow: 0 0 5px #bd5d26;
 }
 
 .active-tab-btn:hover {
-    background: linear-gradient(to right, rgb(210 204 23), rgb(255 153 0));
-    width: 120px;
-    height: 43px;
+    background: #006e47;
+    border: 4px solid #bd5d26;
+    box-shadow: 0 0 5px #bd5d26;
 }
 
 .tabs-settings-content {
@@ -50,11 +48,11 @@
     transform: translate(-50%, -50%);
     width: 95%;
     height: 80%;
+    padding-bottom: 1.5rem;
     border-radius: 20px;
+    background: transparent;
     opacity: 0;
     pointer-events: none;
-    max-width: 90%;
-    max-height: 90%;
 }
 
 .active-tab-content {
@@ -80,12 +78,9 @@
 }
 
 .settings-content-scroll {
-    position: relative;
     overflow: auto;
     width: 100%;
     height: 100%;
-    top: -26px;
-    left: 56px;
 }
 
 .settings-content-scroll::-webkit-scrollbar {
@@ -108,35 +103,40 @@
  ******************************************************************************/
 
 .add-account {
-    position: relative;
+    width: 80%;
     height: 10%;
     border: none;
     border-radius: 15px;
-    font: normal normal bold 30px/40px Tahoma;
+    font: normal normal bold 30px/40px Poppins;
     color: #D1D1D1;
     background-color: #303030;
+    box-shadow: 1px 2px 5px #585858;
     margin: 20px 0;
     margin-bottom: 10px;
-    top: -19px;
-    left: 298px;
 }
 
 .accounts {
     display: contents;
     justify-content: center;
-    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
 }
 
 .account {
     display: inline-block;
-    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
-    box-shadow: 0 0 5px #610c74;
+    background: #00bd7a;
+    box-shadow: 0 0 5px #006e47;
+    border: 4px solid #00bd7a;
     font: normal normal bold 30px/40px Poppins;
     width: 500px;
     height: 100px;
     margin: 1% 2%;
     border-radius: 100px;
     text-align: start;
+}
+
+.account:hover {
+    background: #006e47;
+    box-shadow: 0 0 5px #006e47;
+    border: 4px solid #006e47;
 }
 
 .account-image {
@@ -188,20 +188,15 @@
 }
 
 .active-account {
-    position: relative;
-    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
-    box-shadow: 0 0 5px rgb(255 150 167);
-    margin-bottom: 1rem;
-    transition: opacity 1s;
-    opacity: .4;
-    top: 111px;
-    left: -127px;
+    background: #006e47;
+    border: 4px solid #bd5d26;
+    box-shadow: 0 0 5px #bd5d26;
 }
 
 .active-account:hover {
-    background: linear-gradient(to right, rgb(82, 4, 82), rgb(255, 150, 167));
-    transition: opacity 1s;
-    opacity: 1;
+    background: #006e47;
+    border: 4px solid #bd5d26;
+    box-shadow: 0 0 5px #bd5d26;
 }
 
 
